2019-04-15  Devin Rousso  <drousso@apple.com>

        Web Inspector: Uncaught Exception: null is not an object (evaluating 'this.selectedTreeElement.reveal')
        https://bugs.webkit.org/show_bug.cgi?id=196804
        <rdar://problem/49800708>

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/DOMTreeOutline.js:
        (WI.DOMTreeOutline.prototype.update):

2019-04-15  Devin Rousso  <drousso@apple.com>

        Web Inspector: Uncaught Exception: Can't find variable: WebGL2RenderingContext
        https://bugs.webkit.org/show_bug.cgi?id=196874
        <rdar://problem/49858912>

        Reviewed by Timothy Hatcher.

        * UserInterface/Models/Recording.js:
        (WI.Recording.prototype.createContext):

        * UserInterface/Models/RecordingAction.js:
        (WI.RecordingAction.prototype.process.getContent):

2019-04-15  Devin Rousso  <drousso@apple.com>

        Web Inspector: sidebar panels shouldn't be added as subviews unless visible
        https://bugs.webkit.org/show_bug.cgi?id=196888
        <rdar://problem/49870659>

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/Sidebar.js:
        (WI.Sidebar.prototype.insertSidebarPanel):
        (WI.Sidebar.prototype.removeSidebarPanel):
        (WI.Sidebar.prototype.set selectedSidebarPanel):

2019-04-15  Devin Rousso  <drousso@apple.com>

        Web Inspector: Elements: event listener change events should only be fired for the selected node and it's ancestors
        https://bugs.webkit.org/show_bug.cgi?id=196887
        <rdar://problem/49870627>

        Reviewed by Timothy Hatcher.

        * UserInterface/Models/DOMNode.js:
        (WI.DOMNode.prototype.getEventListeners):

2019-04-15  Devin Rousso  <drousso@apple.com>

        Web Inspector: replace all uses of `this` with `WI` in Main.js/Test.js
        https://bugs.webkit.org/show_bug.cgi?id=196795
        <rdar://problem/49796618>

        Reviewed by Timothy Hatcher.

        * UserInterface/Base/Main.js: